css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Roboto Slab", sans-serif;
  color: white;
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

.img-flex {
  display: block;
  width: 100%;
}

p {
  max-width: 15em;
  background-color: rgba(1,1,1,.3)
}

.unit {
  position: relative;
}

.unit p {
  position: absolute;
  left: 1em;
  bottom: 1em;
  border-radius: .5em;
  padding: 1rem;

}

